Fix: Tag with close in tag list produces unwanted offset (buefy/buefy#3074) (buefy/buefy#3948)
* fix(lib): dislodged tag with attached close button

- Fixes the issue that tags with the attached close button were slightly
  dislodged from other tags. `BTag` with the attached close button is
  not actually a `.tag` but a `<div>` with `.tags`. Bulma imposes
  `margin-bottom: -0.5rem` or `margin-bottom: 1.0rem` on `.tags`, and
  this caused the misalignment. Introduces a new class `inline-tags` to
  cancel the margin imposed by Bulma.

* fix(lib): no margin after tag with attached close

- Fixes the issue that `BTag` with the attached close button did not
  have the margin after it; i.e., a subsequent `BTag` stuck to it.
  Introduces a left/right margin in a text-direction-aware manner.

--- a/src/scss/components/_tag.scss
+++ b/src/scss/components/_tag.scss
@@ -25,3 +25,12 @@
         }
     }
 }
+
+.tags {
+    &.inline-tags {
+        margin-bottom: 0px;
+        &:not(:last-child) {
+            @include ltr-property("margin", 0.5rem);
+        }
+    }
+}
